# Chip8Oxyde

./: .gitignore  Cargo.toml  README.md
src/: chip8.rs  config.rs  main.rs
src/chip8/: audio.rs  character.rs  error.rs  keyboard.rs  registers.rs  screen.rs
