[package]
name = "chip8oxyde"
version = "0.1.0"
authors = ["Mikastiv <m.leblanc_3@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pc-beeper = "0.1.0"

[dependencies.sdl2]
version = "0.34.3"
default-features = false